# E_commerce_Fastapi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1f181c76ea51_product_migration.py  51fd95824dc4_initial_migration.py  5c4b0575bba3_todo_migration.py  6717d08d51c9_order_migration.py  998b1b65e454_email_migration.py  de5964218e77_cart_migration.py
app/: auth.py  config.py  database.py  main.py  model.py
app/router/: admin_router.py  auth_router.py  cart_router.py  email_routers.py  order_router.py  product_router.py  todo_router.py  user_router.py
app/schemas/: admin_schema.py  auth_schema.py  cart_schema.py  email_schema.py  order_schema.py  product_schema.py  todo_schema.py  user_schma.py
